style.css
/* https://coolors.co/212121-673ab7-ffeb3b-009688-fafafa */

@import url('https://fonts.googleapis.com/css?family=Muli|Overpass&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Muli', sans-serif;
}
html {
  scroll-behavior: smooth;
}
body {
  min-height: 100vh;
  background-color: #fafafa;
}
#home-hero {
  height: 100vh;
  width: 100%;
  background-image: url(images/hero-crowd.JPG);
  background-repeat: no-repeat;
  background-position: 50% 15%;
  background-attachment: fixed;
  background-size: cover;
}
.logo a {
  text-decoration: none;
}
#icon {
  height: 120px;
  padding: 15px 5px 15px 15px;
  margin-right: 0;
  transition: all 0.7s ease 0s;
}
.logo img {
  background-color: #673ab7;
}
#wordmark {
  height: 120px;
  padding: 40px 15px 40px 1px;
  margin-left: 0;
  border: none 0;
  /*border-bottom-right-radius: 20px;*/
}
.logo::after {
  content: "";
  background: #673ab7;
  position: absolute;
  width: 33px;
  height: 120px;
  clip-path: polygon(0 0, 100% 0%, 0% 100%, 0% 100%);
}

.header-logo-block {
  top: 0;
  left: 0;
}

.scroll-fix {
	top: 100vh;
	transform:translateY(-100%);
	  position: absolute;
}

.stickyheader {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 4;
}

.header {
  background-color: #673ab7;
  height: 100px;
  min-height: 50px;
  width: 100%;
  font-family: 'Overpass', sans-serif;
}

.header ul {
  display: flex;
  justify-content: space-around;
  transition: all 0.5s ease 0s;
}

.headerUl li {
  list-style-type: none;
  line-height: 100px;
  padding-left: 10px;
  padding-right: 10px;
}

.headerUl a {
  text-decoration: none;
  color: #fafafa;
  font-size: 20px;
  transition: all 1s ease 0s;
  border: none #ffeb3b 2px;
  border-radius: 100px;
  padding: 10px 20px;
}
.headerUl a:hover {
  color: #ffeb3b;
  background-color: rgba(0,0,0,0.5);
}


#mini-icon {
  position: absolute;
  height: 100px;
  padding: 15px 5px 15px 15px;
  transition: all 0.5s ease 0s;
}
#mini-wordmark {
  position: absolute;
  height: 100%;
  opacity: 0;
  padding: 40px 5px 40px 15px;
  display: none;
  transition: all 0.2s ease 0s;
}

/*main body*/

.container h1 {
  font-family: 'Overpass', sans-serif;
  position: relative;
  font-size: 50px;
  z-index: 1;
  overflow: hidden;
  text-align: center;
  padding-top: 20px;
}
h1:before, h1:after {
    position: absolute;
    top: 70%;
    overflow: hidden;
    width: 50%;
    height: 5px;
    content: '\a0';
    background-color: #ffeb3b;
}
h1:before {
    margin-left: -50%;
    text-align: right;
}

.container-text {
  margin: 10px 10% 0 10%;
  line-height: 40px;
  font-size: 20px;
}

#intro-p {
	overflow: auto;
}

#img1 img{
  width: 50%;
  float: left;
  margin-right: 40px;
}

.photogrid {
  display: flex;
  justify-content: space-between;
  width: 100%;
	margin: 1% 0 1% 0;
}

.photogrid-pic {
  margin: 1% 0 0 0;
  width: 32%;
}
.photogrid-pic img{
  width: 100%;
}

.menu {
  display: none;
  float: right;
  padding: 0 40px 0 40px;
  color: #fafafa;
  background-color: #8259cb;
  font-size: 25px;
  font-weight: bold;
  cursor: pointer;
}

.menu:hover {
  box-shadow: inset 0px 0px 0px 4px #fafafa;
  transition: all 0.2s ease 0s;
}

.overlay {
  height: 100%;
  width: 0;
  position: fixed;
  left: 0;
  top: 0;
  background-color: #212121;
  overflow-x: hidden;
  transition: all 0.5s ease 0s;
}

.overlay__content {
  display: flex;
  height: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.overlay a {
  padding: 15px;
  font-size: 36px;
  display: block;
  transition: all 0.3s ease 0s;
  color: #fafafa;
  text-decoration: none;
}

.overlay a:hover,
.overlay a:focus {
  color: #009688;
}
.overlay .close {
  position: absolute;
  top: 20px;
  right: 45px;
  font-size: 60px;
  color: #edf0f1;
}

#mobile__menu {
  z-index: 5;
}
.menuarea {
  line-height: 100px;
}
.close {
  cursor: pointer;
}
/* Sponsor page */
#sponsors-hero {
	text-align: center;
	font-size: 22px;
	padding-top: 20px;
	background-color: #673ab7;
	color: #ffffff;
	margin: 5px 5px 5px 5px;
	border-radius: 5px;
}
.hero img{
	width: 100%;
}
#sponsor-info ul {
  padding-left: 40px;
}
.highlight {
  background-color: #009688;
}
.highlight, .highlight:visited {
  color: white;
}


/* Events */
#events-hero {
  background: radial-gradient(circle, rgba(29,107,137,1) 0%, rgba(0,0,0,1) 100%);
}

#v-hero {
  display: none;
}

.event-list {
    padding: 30px 10% 0 10%;
}
.event-list h2 {
  margin-bottom: 20px;
}

.event {
  margin-bottom: 30px;
}

#upcoming {
  background-color: #673ab7;
  color: #fafafa;
  overflow: auto;
  box-shadow: 0px 5px 3px -3px #000000;
}
/* footer */
footer {
	width: 100%;
	background-color: white;
	overflow: hidden;
	position: relative;
  background-color: #fafafa;
}
#social a {
  display: inline-block;
  border-radius: 20px;
}
#social i {
  color: #212121;
  font-size: 50px;
  margin: 20px 30px;

}
#social a:hover > i {
  color: #009688;
}
#social a:hover {
    background-color: #ebebeb;

}
/* purple triangle behind footer logo */

footer::before,
footer::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    border-color: transparent;
    border-style: solid;
	  z-index: 0;
}

footer::before {
    border-width: 8.85em;
    border-left-color: #825dc4;
    border-bottom-color: #825dc4;
}

footer::after {
	border-width: 8.5em;
    border-left-color: #673ab7;
    border-bottom-color: #673ab7;
}


.footer-column {
	max-width: 25%;
	z-index: 1;
}
.footer-column a {
	text-decoration: none;
}
.column-container {
	display: flex;
	justify-content: space-between;
	margin: 10px 0 0 0;
}
#footer-email {
  color: #009688;
}
#footerlogo {
display: flex;
	align-items: flex-end;
}
#footerlogo img{
	width: 8em;
	margin: 10px;
}

/*social media links in footer*/
.media-icons {
	height: auto;
	width: 50px;
	vertical-align: middle;
}

.exrsrc {
	display: flex;
}
.exrsrc p {
	padding: 0 10px 5px 10px;
	margin-top: 0;
	width: 80%;
}

.exrsrc a{
	width: 150px;
	height: 150px;
	position: relative;
}

.exrsrc img {
	width: 100%;
}

/*Adobe Spark imbed*/
.asp-embed-link {
	width: 100%;
}
#spark {
 margin: 0;
}
#spark a {
  background-image: url(RearShotCrowd.JPG);
}
/* Team page*/
.team-mentor {
	display: flex;
  justify-content: flex-start;
  flex-direction: row;
	margin-right: 10%;
	margin-left: 10%;
	margin-bottom: 30px;
	line-height: 1.5;"
}
.team-mentor div{
	background-color: #e1e1e1;
	padding: 5px;
	margin: 3px;
	width: 50%;
}
/*SHRINK HEIGHT OF COLUMN AS WINDOW WIDTH DECREASES*/
.team-array {
	display: flex;
	justify-content: center;
	align-items: stretch;
	align-content: space-between;
	width: 100%;
  margin-bottom: 30px;
}
.team-column {
	background-color: #673ab7;
	margin: 10px;
	width: 18%;
	text-align: center;
  /*
	box-shadow: 0 0	10px rgba(0,0,0,0.4);
	border-radius: 10px; */
	overflow: hidden;
}
.team-column:hover {
	cursor: pointer;
}
.team-column i{
  position: relative;
  top: 85%;
  font-size: 40px
}
.team-column-pic {
	height: 380px;
  background-size: cover;
  background-position: 0% 50%;
}

.team-column a, .team-column a:visited {
	text-decoration: none;
	color: #fafafa;
}
.team-column:hover a {
	text-decoration: none;
}
.team-column h2 {
  margin: 10px;
}
#p-hard {
	background-image: url(images/team/teamhardware.jpg);
}
#p-soft {
	background-image: url(images/team/teamsoftware.jpg);
}
#p-prb {
	background-image: url(images/team/teamprb.jpg);
}
#p-cad {
	background-image: url(images/team/team-cad.jpeg);
}
#p-strat {
	background-image: url(images/team/team-strat.jpg);
}

/* NEWS */

.news {
max-width: 100%;
margin-top: 10px;
margin-bottom: 10px;
}

.news h2 {
  margin: 40px 0 20px 0;
}

.mainnews {
background: #fafafa;
height: 20%;
padding: 10px;
box-shadow: 0px 2px 10px rgba(0,0,0,0.25);
border-radius: 2px;
}

.mainimg img {
width: 100%;
}

.subnews {
margin-top: 5px;
padding: 10px;
background: #fafafa;
display: flex;
justify-content: flex-start;
box-shadow: 0px 2px 10px rgba(0,0,0,0.25);
border-radius: 2px;
}

.newsimage {
background-color: slate;
width: 30%;
}
.newsimage img {
background-color: slate;
width: 100%;
}

.newsdetails {
width: 70%;
padding: 0 5px 0 5px;
}

.mainnews h3, .subnews h3 {
color: #0088cc;
padding: 0;
margin: 0;
font-weight: bold;
text-transform: uppercase;
}

.mainnewsdesc, .description, .sportanddate {
color: #5b5b5b;
}

.ig-posts {
  border: none 0px RED;
  overflow-x: scroll;
  overflow-y: hidden;
}

.ig-div {
  overflow: auto;
  display: flex;
}

/*
.ig-posts {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
}
.ig-posts blockquote {
  flex: 0 1 auto;
}
*/

/* -------------------------------------------------- Window scaling properties -------------------------------------------------------------------------------- */
@media only screen and (max-width: 1017px) {
  /* MOBILE NAV BAR */
  #headerUl {
    display: none;
  }
  .nav__links,
  .cta {
    display: none;
  }
  .menu {
    display: initial;
  }
  /*Mobile Team page */
  .team-mentor {
    flex-direction: column;
  }
  .team-mentor div {
    width: 100%;
  }
  .team-array {
    flex-direction: column;
        align-items: center;
  }
  .team-column {
    align-items: center;
    width: 90%;
  }
  .container h1 {
    font-size: 40px;
  }
  .container-text h3 {
    font-size: 30px;
  }
  .container-text p {
    margin-bottom: 20px;
  }
  .team-column-pic {
    background-position: 50% 50%;
    background-attachment: fixed;
  }
  #icon:hover {
    box-shadow: inset 0px 0px 0px 4px rgba(255,255,255,0.6);
    transition: all 0.2s ease 0s;
  }
  #wordmark {
    display: none;
  }
  #img1 img{
    display: none;
  }
  /* mobile footer */
  footer {
    background-color: #212121;
    color: #fafafa;
  }
  #social i {
    color: #fafafa;
  }
.column-container {
  flex-direction: column;
  flex-grow: 1;
  align-items: center;
  margin: 0 20px 0 20px;
}
.footer-column {
  max-width: 100%;
}
  footer::before {
      border-width: 0;
  }

  footer::after {
  	border-width: 0;
  }
}
@media screen and (max-width: 630px) {
  .container h1 {
    font-size: 30px;
    margin-bottom: 0px;
  }
  .exrsrc {
    flex-direction: column;
    margin: 0 auto;
  }
  .exrsrc a {
    width: 50%;
    height: auto;
    margin: auto;
    padding: 5%;
  }
  .exrsrc p {
    width: 100%;
  }
}
@media screen and (max-width: 515px) {
  .container h1 {
    font-size: 25px;
    margin-bottom: 0px;
  }
  .container-text {
    font-size: 15px;
    line-height: normal;
  }
  #sponsor-info p {
    margin-bottom: 0;
  }
  #sponsor-info ul {
    margin: 10px 0 10px 0;
  }
  #h-hero {
    display: none;
  }
  #v-hero {
    display: initial;
  }
}

